[package]
name = "nlx-gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
opt-level = 3
#debug = true

[dependencies]
pem = "1.1.0"
http = "0.2.8"
log = "0.4.17"
bytes = "1.2.1"
prost = "0.11.0"
rustls = "0.20.7"
anyhow = "1.0.65"
wyhash2 = "0.2.1"
hostname = "0.3.1"
itertools = "0.10.5"
x509-parser = "0.14.0"
prost-types = "0.11.1"
futures-util = "0.3.25"
async-channel = "1.7.1"
pretty_env_logger = "0.4.0"
tokio = { version = "1.21.2", features = ["rt", "sync", "rt-multi-thread"] }
serde = { version = "1.0.145", features = ["derive"] }
tonic = { version = "0.8.2", features = ["tls", "gzip"] }
clap = { version = "4.0.17", features = ["derive", "env"] }
tokio-util = { version = "0.7.4", default-features = false, features = ["compat"] }
warp = { version = "0.3.3", features = ["tls"] }
backoff = { version = "0.4.0", features = ["futures", "tokio"] }
hyper = { version = "0.14.20", features = ["full"] }
hyper-rustls = { version = "0.23.0", features = ["http2"] }

[build-dependencies]
tonic-build = "0.8.2"

#[patch.crates-io]
#hyper = { path = "/Users/dmeijboom/DevProjects/github/hyper" }
#h2 = { path = "/Users/dmeijboom/DevProjects/github/h2" }
